# kotoba

./: .gitignore  README.md
server/: Cargo.toml  dotenv-example
server/db/: scheme.sql
server/src/: main.rs
server/src/db/: file.rs  id.rs  language.rs  mod.rs  page.rs  tag.rs  translation.rs
server/src/db/comment/: content.rs  mod.rs  reply.rs
server/src/db/post/: content.rs  description.rs  meta.rs  mod.rs  status.rs  tags.rs  title.rs
server/src/db/user/: handle.rs  meta.rs  mod.rs  role.rs
server/src/error/: mod.rs
server/src/jwt/: mod.rs
server/src/services/: mod.rs
server/src/services/languages/fetch/: db.rs  mod.rs
server/src/services/post/: mod.rs
server/src/services/post/all/: db.rs  mod.rs
server/src/services/post/bookmarks/: db.rs  mod.rs
server/src/services/post/create/: db.rs  mod.rs
server/src/services/post/edit/: db.rs  mod.rs
server/src/services/post/feed/: db.rs  mod.rs
server/src/services/post/fetch/: db.rs  mod.rs
server/src/services/post/translate/: db.rs  mod.rs
server/src/services/reauth/: db.rs  mod.rs
server/src/services/sign_in/: db.rs  mod.rs
server/src/services/sign_up/: db.rs  mod.rs
server/src/services/user/: mod.rs
server/src/services/user/bookmarks/: db.rs  mod.rs
server/src/services/user/comments/: db.rs  mod.rs
server/src/services/user/fetch/: db.rs  mod.rs
server/src/services/user/follows/: db.rs  mod.rs
server/src/services/user/posts/: db.rs  mod.rs
server/src/services/user/search/: db.rs  mod.rs
server/src/services/user/translations/: db.rs  mod.rs
web/: elm.json
(+79 files in other folders)
