[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
actix-web = "4"
actix-cors = "0.6.4"
actix-multipart = "0.6.0"
actix-files = "0.6.2"

sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "mysql", "chrono" ] }
chrono = "0.4.24"
futures = "0.3.27"

serde = { version = "1", features = ["derive"] }

argon2 = "0.5.0"
jwt-simple = "0.11.4"
regex = "1.7.3"
uuid = { version = "1.3.0", features = ["v4", "fast-rng", "macro-diagnostics"] }

num = "0.4.0"
thiserror = "1"

tracing = "0.1"
tracing-subscriber = "0.3"

dotenv = "0.15.0"
